# Willog

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  ProgBar.hpp  Willog.hpp  Willog.hpp~
test/: CMakeLists.txt  Test.cpp
